@@ -88,8 +88,8 @@ dependencies {
     implementation name:  'sebase'
     implementation name:  'usrdocjh'
     implementation name:  'XMIFramework'
-    implementation 'ch.interlis:ili2c-tool:5.1.5'
-    implementation 'ch.interlis:ili2c-core:5.1.5'
+    implementation 'ch.interlis:ili2c-tool:5.2.3+'
+    implementation 'ch.interlis:ili2c-core:5.2.3+'
     implementation 'ch.ehi:ehibasics:1.4.0'
     implementation(group:'org.freehep', name:'freehep-graphicsio', version:'2.3'){
     	exclude group:'junit', module:'junit'
